# adl_temporal_monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/adl_monitor/: demo_specs.py  spec.py  types.py
